--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,9 @@
 @use './partials/variables' as *;
 
-$fa-font-path:'../webfonts';
-@import '@fonntawesome/fontawesome-free/scss/solid.scss';
-@import '@fonntawesome/fontawesome-free/scss/regular.scss';
-@import '@fonntawesome/fontawesome-free/scss/brands.scss';
+// $fa-font-path:'../webfonts';
+// @import '@fonntawesome/fontawesome-free/scss/solid.scss';
+// @import '@fonntawesome/fontawesome-free/scss/regular.scss';
+// @import '@fonntawesome/fontawesome-free/scss/brands.scss';
 
 @import 'bootstrap/scss/bootstrap';
 
