--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -19,3 +19,25 @@ body{
   color: $whiteText;
   background-color: $grayBg;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 5px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: $redTitle; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: $redTitle; 
+}
