--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,12 +17,14 @@ $fa-font-path: '../webfonts';
 
 body{
   color: $whiteText;
-}
-
-main{
   background: rgb(0,0,0);
   background: linear-gradient(180deg, rgba(0,0,0,1) 20%, rgba(115,115,115,1) 50%, rgba(0,0,0,1) 80%);
 }
+
+// main{
+//   background: rgb(0,0,0);
+//   background: linear-gradient(180deg, rgba(0,0,0,1) 20%, rgba(115,115,115,1) 50%, rgba(0,0,0,1) 80%);
+// }
 
 ::-webkit-scrollbar {
   width: 5px;
