--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @use './partials/variables' as *;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $fa-font-path: '../webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
@@ -18,6 +19,7 @@ $fa-font-path: '../webfonts';
 body{
   color: $whiteText;
   background: rgb(0,0,0);
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .front{
